--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <script defer type="module" src="/main.js"></script>
     <title>ACRUD</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container inter-font">
       <div class="header">
         <div>
           <h1 class="acrud-name">ACRUD</h1>
