chore: update task input and task list styles

--- a/index.html
+++ b/index.html
@@ -34,23 +34,34 @@
           />
 
           <button class="btn-input">
-            <img src="img/plus-bold.svg" alt="plus icon" />
+            <img class="add-icon" src="img/plus-bold.svg" alt="plus icon" />
           </button>
         </div>
       </div>
       <div class="tasks">
-        <div class="task" id="task-id" data-id="123456">
-          <div class="complete-false">&nbsp;</div>
-          <p class="task-text" id="task-text">Your first task</p>
+        <!-- <div class="task" id="task-id" data-id="123456">
+          <div class="task-select">
+            <div class="complete-false select-icon">&nbsp;</div>
+            <p class="task-text" id="task-text">Task 1</p>
+          </div>
+
           <div class="update-delete">
             <div id="update-icon">
-              <img src="img/note-pencil-bold.svg" alt="edit icon" />
+              <img
+                class="task-icon"
+                src="img/note-pencil-bold.svg"
+                alt="edit icon"
+              />
             </div>
             <div id="delete-icon">
-              <img src="img/x-circle-bold.svg" alt="close icon" />
+              <img
+                class="task-icon"
+                src="img/x-circle-bold.svg"
+                alt="close icon"
+              />
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </body>
