--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               placeholder="ACRUD Password"
             />
           </div>
-          <button class="btn btn-submit btn-submit--signup">Submit</button>
+          <button class="btn btn-submit btn-submit--login">Submit</button>
         </form>
       </div>
     </div>
