fix: icons display bug fix

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             />
 
             <button class="btn-input">
-              <img class="add-icon" src="img/plus-bold.svg" alt="plus icon" />
+              <img class="add-icon" src="./plus-bold.svg" alt="plus icon" />
             </button>
           </div>
         </div>
